# IntentLog

./: .gitignore  AI.md  AUDIT_REPORT.md  Advanced-Use-Cases.md  CHANGELOG.md  CONTRIBUTING.md  Doctrine-of-intent.md  INTEGRATION.md  MANIFEST.in  Memory-Vault-Integration.md  PRODUCTION_READINESS.md  Prior-Art.md  README.md  SECURITY.md  SECURITY_AUDIT.md  SUPPORT.md  Your-Work-Isnt-Worthless.md  claude.md  mkdocs.yml  mp-02-spec.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  intent_audit.yml  tests.yml
benchmarks/: __init__.py  run_benchmarks.py  test_benchmarks.py
code/: audit_intents.py  intent_audit.yml
docs/: index.md
docs/api/: analytics.md  cli.md  core.md  crypto.md  index.md  mp02.md  privacy.md  semantic.md  storage.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  concepts.md  integrations.md  mp02.md
examples/: basic_usage.py
src/intentlog/: __init__.py  analytics.py  audit.py  backup.py  cli.py  context.py  core.py  crypto.py  decorator.py  export.py  filelock.py  logging.py  merkle.py  metrics.py  privacy.py  ratelimit.py  schema.py  semantic.py  storage.py  sufficiency.py  triggers.py  validation.py
src/intentlog/cli/: __init__.py  __main__.py  analytics.py  completion.py  core.py  crypto.py  formalize.py  mp02.py  privacy.py  utils.py
src/intentlog/integrations/: __init__.py  boundary_daemon.py  boundary_siem.py  llm_classifier.py  memory_vault.py
src/intentlog/llm/: __init__.py  anthropic.py  ollama.py  openai.py  provider.py  registry.py
src/intentlog/mp02/: __init__.py  ledger.py  observer.py  receipt.py  segmentation.py  signal.py  validator.py
tests/: __init__.py  test_audit.py  test_cli_integration.py  test_core.py  test_formalization.py  test_integrations.py  test_llm.py  test_llm_classifier.py  test_load.py  test_mp02.py  test_phase2.py  test_phase4.py  test_phase5.py  test_privacy.py  test_storage.py  test_triggers.py
